[tool.poetry]
name = "ddrawry-server"
version = "0.1.0"
description = "ddrawry api server"
authors = ["newbission <newbission@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
