[tool.poetry]
name = "ddrawry-server"
version = "0.1.0"
description = "ddrawry api server"
authors = ["newbission <newbission@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
jose = "^1.0.0"
pyjwt = "^2.9.0"
pydantic = "^2.9.2"
openai = "^1.51.2"
pycryptodome = "^3.21.0"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
